Forgot Password, javax email

--- a/src/test/resources/locale/de/language.properties
+++ b/src/test/resources/locale/de/language.properties
@@ -1,2 +1,2 @@
-subject=Notice from www.gourmondo.co.uk
-forgotPasswordEmailFrom=info@gourmondo.co.uk
+subject=Mitteilung von www.gourmondo.de
+forgotPasswordEmailFrom=info@gourmondo.de
