Forgot Password test

--- a/src/test/resources/locale/de/language.properties
+++ b/src/test/resources/locale/de/language.properties
@@ -1,2 +1,2 @@
-subject=Mitteilung von www.gourmondo.de
-forgotPasswordEmailFrom=info@gourmondo.de
+welcomeMessage=Herzlich Willkommen,
+loginPageErrorMessage=Ihr Benutzername oder Kennwort ist falsch.
